tests/baselines/reference/parserComputedPropertyName8.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName8.ts(2,11): error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName8.ts(2,12): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName8.ts (2 errors) ====
    class C {
       public [e]
              ~~~
!!! error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
               ~
!!! error TS2304: Cannot find name 'e'.
    }